# taker-solana

./: .gitignore  Cargo.toml  Justfile  README.md  client.js
cli/: Cargo.toml
cli/src/: lib.rs
program/: Cargo.toml  program-id.md
program/examples/: listener.rs  transact.rs
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  spl_helper.rs
program/src/processor/: mod.rs
program/src/state/: contract_account.rs  state.rs
programs/taker/: Cargo.toml
programs/taker/src/: entrypoint.rs  impls.rs  instruction.rs  lib.rs  nft_bid.rs  nft_deposit.rs  nft_listing copy.rs  nft_listing.rs  nft_loan.rs  nft_pool.rs  spl_helper.rs  utils.rs
programs/taker/src/processor/: initialize.rs  mod.rs
programs/taker/src/state/: contract_account.rs  state.rs
scripts/: transact.js
scripts/taker_nft_listing/: Cargo.toml
scripts/taker_nft_listing/src/: lib.rs
subscriber/: Cargo.toml
tests/: taker-solana.js
tkr-token/: Cargo.toml
tkr-token/src/: lib.rs
