[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "subscriber"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.5"
anyhow = "1"
env_logger = "0.8"
fehler = "1"
log = "0.4"
serde = {version = "1", features = ["derive"]}
solana-client = "1.6.6"
solana-program = "1.6.6"
solana-sdk = "1.6.6"
spl-associated-token-account = {version = "1", features = ["no-entrypoint"]}
spl-token = {version = "3.1", features = ["no-entrypoint"]}
structopt = "0.3"
taker = {path = "../programs/taker", features = ["cpi"]}
