[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = {path = "../../anchor/client", version = "0.7"}
anchor-spl = {path = "../../anchor/spl", version = "0.7"}
anyhow = "1"
derive_more = "0.99"
env_logger = "0.8"
fehler = "1"
log = "0.4"
rand = "0.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
solana-clap-utils = "1"
solana-client = "1"
solana-logger = "1"
solana-program = "1"
solana-sdk = "1"
spl-associated-token-account = {version = "1", features = ["no-entrypoint"]}
spl-token = {version = "3", features = ["no-entrypoint"]}
structopt = "0.3"
taker = {path = "../programs/taker", features = ["cpi"]}
