[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "taker"
version = "0.1.0"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
serde = {version = "1", features = ["derive"]}
solana-program = "1.6"

[dev-dependencies]
anyhow = "1"
solana-sdk = "1.6"
structopt = "0.3"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
