[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
edition = "2018"
name = "subscriber"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
solana-client = "1.6.6"
solana-program = "1.6.6"
solana-sdk = "1.6.6"
structopt = "0.3"
