[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = "Taker Protocol"
edition = "2018"
name = "taker"
version = "0.1.0"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.6"
anchor-spl = "0.6"
borsh = "0.8"
fehler = "1"
solana-program = "1.6"
spl-associated-token-account = {version = "1", features = ["no-entrypoint"]}
spl-token = {version = "3.1", features = ["no-entrypoint"]}
thiserror = "1"

[dev-dependencies]
solana-sdk = "1.6"

[lib]
crate-type = ["cdylib", "lib"]
name = "taker"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
